server address config

--- a/controller/.env
+++ b/controller/.env
@@ -6,5 +6,5 @@ ACAPY_ADMIN_API_KEY=secret
 CLIENT_URL=http://localhost:3000
 
 # server variables
-SERVER_HOST=0.0.0.0
-SERVER_PORT=8180
+SERVER_ADDRESS=0.0.0.0:8180
+API_BASE_URL=/api/v1
