got the ingress on cornerstone-issuer working, had the selector in the service wrong

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -24,7 +24,7 @@ test:
 
 build_docker:
 	#docker build -t georgelza/cornerstone-issuer:0.0.2 .
-	docker build -t cornerstone-issuer .
+	docker build -t cornerstone-issuer:0.0.2 .
 	docker tag cornerstone-issuer:0.0.2 149875424875.dkr.ecr.af-south-1.amazonaws.com/cornerstone-issuer:0.0.2
 
 push_docker:
