--- a/controller/kubernetes/aws-eks/cornerstone-issuer/service.yaml
+++ b/controller/kubernetes/aws-eks/cornerstone-issuer/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cornerstone-issuer-agent
+  name: cornerstone-issuer
   namespace: cornerstone-issuer
 spec:
   type: ClusterIP         # Default type (ClusterIP), NodePort, LoadBalancer
