--- a/controller/kubernetes/aws-eks/ingress.yaml
+++ b/controller/kubernetes/aws-eks/ingress.yaml
@@ -2,6 +2,9 @@
 # https://k3d.io/v5.0.1/usage/exposing_services/
 
 # https://www.eksworkshop.com/beginner/130_exposing-service/ingress_controller_alb/
+#
+# see below for annotations related to the ssl settings
+# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/tasks/ssl_redirect/
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -13,6 +16,9 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     ingress.kubernetes.io/ssl-redirect: "false"    
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:af-south-1:149875424875:certificate/f862af7f-40b5-4d20-8960-a746f637aff8
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
+    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
 spec:
   rules:
   - http:
@@ -24,3 +30,10 @@ spec:
             name: cornerstone-issuer
             port:
               number: 8180
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: cornerstone-issuer-agent
+            port:
+              number: 8000
