--- a/controller/kubernetes/aws-eks/agent-configmap.yaml
+++ b/controller/kubernetes/aws-eks/agent-configmap.yaml
@@ -1,19 +1,19 @@
 # 
-# ./manage start 172.16.10.29 "LEDGER_INSTANCE_NAME=My Iamza - Sandbox 0.5" WEB_SERVER_HOST_PORT=9000 
+# ./manage start 172.16.10.29 "LEDGER_INSTANCE_NAME=My Iamza-sandbox" WEB_SERVER_HOST_PORT=9000 
 #
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cornerstone-issuer-agent-configmap
-  namespace: cornerstone-issuer-agent
+  namespace: cornerstone-issuer
 data:
     # Server Variables
     ACAPY_ADMIN_INSECURE_MODE: "true"
     ACAPY_AUTO_PROVISION: "true"
     ACAPY_DEBUG_CONNECTIONS: "true"
-    ACAPY_ENDPOINT: "http://0.0.0.0:8000"
-    ACAPY_LABEL: "Cornerstone Issuer"
+    ACAPY_ENDPOINT: "https://issuer.iamza-sandbox.com/"
+    ACAPY_LABEL: "Iamza Cornerstone Issuer"
     ACAPY_GENESIS_URL: "https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_builder_genesis"
     ACAPY_WALLET_NAME: "issuer_wallet"
     ACAPY_WALLET_KEY: "issuer_secret"
@@ -22,4 +22,8 @@ data:
     ACAPY_LOG_LEVEL: "info"
     ADMIN_PORT: "8001"  # http
     AGENT_PORT: "8000"  # http
-
+    ACAPY_INVITE_MULTI_USE: "true"
+    ACAPY_AUTO_ACCEPT_INVITES: "true"
+    ACAPY_AUTO_ACCEPT_REQUESTS: "true"
+    ACAPY_INVITE_LABEL: "IAMZA Cornerstone Credential"
+    ACAPY_IMAGE_URL: "https://pbs.twimg.com/profile_images/913394047271735296/vFq3d_OE_400x400.jpg"
