--- a/controller/kubernetes/aws-eks/agent-configmap.yaml
+++ b/controller/kubernetes/aws-eks/agent-configmap.yaml
@@ -18,6 +18,9 @@ data:
     ACAPY_WALLET_NAME: "issuer_wallet"
     ACAPY_WALLET_KEY: "issuer_secret"
     ACAPY_WALLET_TYPE: "indy"
+    ACAPY_WALLET_STORAGE_TYPE: postgres_storage
+    ACAPY_WALLET_STORAGE_CONFIG: "{\"url\":\"postgres-nodeport-svc.postgres.svc.cluster.local:5432\",\"wallet_scheme\":\"DatabasePerWallet\"}"
+    ACAPY_WALLET_STORAGE_CREDS: "{\"account\":\"dha\",\"password\":\"test123\",\"admin_account\":\"dha\",\"admin_password\":\"test123\"}"
     ACAPY_WALLET_SEED: "+SLRmwIo1PtxNJjXx5LcSYk59mJrJIHf"       # Register https://selfserve.sovrin.org
     ACAPY_LOG_LEVEL: "info"
     ADMIN_PORT: "8001"  # http
@@ -26,4 +29,8 @@ data:
     ACAPY_AUTO_ACCEPT_INVITES: "true"
     ACAPY_AUTO_ACCEPT_REQUESTS: "true"
     ACAPY_INVITE_LABEL: "IAMZA Cornerstone Credential"
-    ACAPY_IMAGE_URL: "https://pbs.twimg.com/profile_images/913394047271735296/vFq3d_OE_400x400.jpg"
+    # Images stored in s3://iamza-sandbox  bucket
+    # https://iamza-sandbox.s3.af-south-1.amazonaws.com/black1.png -> active.png
+    # https://iamza-sandbox.s3.af-south-1.amazonaws.com/black1.png
+    # https://iamza-sandbox.s3.af-south-1.amazonaws.com/white1.png
+    ACAPY_IMAGE_URL: "https://iamza-sandbox.s3.af-south-1.amazonaws.com/active.png"
