--- a/controller/kubernetes/aws-eks/agent-configmap.yaml
+++ b/controller/kubernetes/aws-eks/agent-configmap.yaml
@@ -20,7 +20,7 @@ data:
     ACAPY_WALLET_TYPE: "indy"
     ACAPY_WALLET_STORAGE_TYPE: postgres_storage
     ACAPY_WALLET_STORAGE_CONFIG: "{\"url\":\"postgres-nodeport-svc.postgres.svc.cluster.local:5432\",\"wallet_scheme\":\"DatabasePerWallet\"}"
-    ACAPY_WALLET_STORAGE_CREDS: "{\"account\":\"dha\",\"password\":\"test123\",\"admin_account\":\"dha\",\"admin_password\":\"test123\"}"
+    ACAPY_WALLET_STORAGE_CREDS: "{\"account\":\"iamza\",\"password\":\"test123\",\"admin_account\":\"iamza\",\"admin_password\":\"test123\"}"
     ACAPY_WALLET_SEED: "+SLRmwIo1PtxNJjXx5LcSYk59mJrJIHf"       # Register https://selfserve.sovrin.org
     ACAPY_LOG_LEVEL: "info"
     ADMIN_PORT: "8001"  # http
