--- a/controller/.env
+++ b/controller/.env
@@ -1,5 +1,8 @@
 # acapy variables
-ACAPY_URL=http://0.0.0.0:8001
+ACAPY_URL=http://0.0.0.0:10001
+SCHEMA_ID=BER7WwiAMK9igkiRjPYpEp:2:Cornerstone_Credential:1.2
+CRED_DEF_ID=BER7WwiAMK9igkiRjPYpEp:3:CL:40479:cornerstone_1.2
+DID=BER7WwiAMK9igkiRjPYpEp
 
 # client variables
 CLIENT_URL=http://localhost:3000
