--- a/deploy/kubernetes/aws-eks/cntrl-configmap.yaml
+++ b/deploy/kubernetes/aws-eks/cntrl-configmap.yaml
@@ -17,7 +17,8 @@ data:
   # CLIENT_URL: "http://cornerstone-issuer-agent.cornerstone-issuer.svc.cluster.local:3000" # socket
   # server variables
   SERVER_ADDRESS: 0.0.0.0:8180
-  DHA_QUERY_SERVER_ADDRESS: 0.0.0.0:8181
+  EMAIL_USERNAME: aws_iamzanet@bankservafrica.com
+  EMAIL_PASSWORD: K5fEoXa88
   # DHA variables
   DHA_API: "https://npr-prod.dha.gov.za:8093/NATCGI/BVRSTEST/NWWAPS/SYSWEB/WEB046N?IDNO="
   DHA_SIMULATOR_API: "http://dha-api-redis.app.svc.cluster.local:8021/redis/getIDRecord?id="
