--- a/deploy/kubernetes/aws-eks/cntrl-configmap.yaml
+++ b/deploy/kubernetes/aws-eks/cntrl-configmap.yaml
@@ -23,3 +23,6 @@ data:
   DHA_API: "https://npr-prod.dha.gov.za:8093/NATCGI/BVRSTEST/NWWAPS/SYSWEB/WEB046N?IDNO="
   DHA_SIMULATOR_API: "http://dha-api-redis.app.svc.cluster.local:8021/redis/getIDRecord?id="
   DHA_API_SWITCH: "2"
+  # txn counter variables
+  TXN_COUNTER_API: "https://issuer-cntr.iamza-sandbox.com/issuer/submit?payload="
+  TXN_COUNTER_SWITCH: "1"
