--- a/deploy/kubernetes/aws-eks/cntrl-deployment.yaml
+++ b/deploy/kubernetes/aws-eks/cntrl-deployment.yaml
@@ -38,3 +38,9 @@ spec:
           envFrom:
             - configMapRef:
                 name: cornerstone-issuer-configmap
+          env:
+            - name: EMAIL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: cornerstoneissuersecret
+                  key: emailpw
