--- a/deploy/k8s/agent-configmap.yaml
+++ b/deploy/k8s/agent-configmap.yaml
@@ -14,7 +14,9 @@ data:
   ACAPY_DEBUG_CONNECTIONS: "true"
   ACAPY_ENDPOINT: "https://issuer-agent.iamza-sandbox.com"
   ACAPY_LABEL: "Iamza Cornerstone Issuer"
-  ACAPY_GENESIS_URL: "https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_builder_genesis"
+  ACAPY_GENESIS_URL: "https://raw.githubusercontent.com/Indicio-tech/indicio-network/main/genesis_files/pool_transactions_demonet_genesis"
+  # ACAPY_GENESIS_URL: "https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_builder_genesis"
+  # ACAPY_GENESIS_URL: "https://raw.githubusercontent.com/sovrin-foundation/sovrin/stable/sovrin/pool_transactions_sandbox_genesis"
   ACAPY_WALLET_NAME: "issuer_wallet"
   #  ACAPY_WALLET_KEY: ""
   ACAPY_WALLET_TYPE: "indy"
