--- a/deploy/k8s/secret.yaml
+++ b/deploy/k8s/secret.yaml
@@ -16,7 +16,7 @@ metadata:
 type: Opaque
 data:
   acapywalletkey: aXNzdWVyX3NlY3JldA==
-  emailpw: I0B3NU1AejN0MTI=
+  emailpw: OUQmQVE1UWo=
   emailusername: YXdzX2lhbXphbmV0QGJhbmtzZXJ2YWZyaWNhLmNvbQ==
   emailsmtpserver: c210cC5vZmZpY2UzNjUuY29t
   emailsmtpport: NTg3
