--- a/deploy/k8s/cntrl-configmap.yaml
+++ b/deploy/k8s/cntrl-configmap.yaml
@@ -7,18 +7,18 @@ metadata:
 data:
   # acapy variables
   ACAPY_URL: "http://cornerstone-issuer-agent.cornerstone-issuer.svc.cluster.local:8001"
-  SCHEMA_ID: "BER7WwiAMK9igkiRjPYpEp:2:Cornerstone_Credential:3.0"
+  SCHEMA_ID: "BER7WwiAMK9igkiRjPYpEp:2:Cornerstone_Credential:1.0"
   SCHEMA_NAME: "Cornerstone_Credential"
-  SCHEMA_VERSION: "3.0"
-  CRED_DEF_ID: "BER7WwiAMK9igkiRjPYpEp:3:CL:59781:Cornerstone"
+  SCHEMA_VERSION: "1.0"
+  CRED_DEF_ID: "BER7WwiAMK9igkiRjPYpEp:3:CL:41749:Cornerstone Credential 1.0"
   PUBLIC_DID: "BER7WwiAMK9igkiRjPYpEp"
   # server variables
   SERVER_ADDRESS: 0.0.0.0:8180
   # DHA variables
   # DHA_API: "https://npr-prod.dha.gov.za:8093/NATCGI/BVRSTEST/NWWAPS/SYSWEB/WEB046N?IDNO=" # test env
   DHA_API: "https://npr-prod.dha.gov.za:8094/NATCGI/BVRSLIVE/NWWAPS/SYSWEB/WEB046N?IDNO="
-  DHA_SIMULATOR_API: "http://dha-api-postgres.app.svc.cluster.local:8021/postgres/getIDRecord?id="
-  DHA_API_SWITCH: "2"
+  DHA_SIMULATOR_API: "http://dha-api-postgres.app.svc.cluster.local:8023/pg/getIDRecord?id="
+  DHA_API_SWITCH: "1"
   # txn counter variables
   TXN_COUNTER_API: "https://issuer-cntr.iamza-sandbox.com/issuer/submit?payload="
   TXN_COUNTER_SWITCH: "0"
